--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us — Edensafe Montessori</title>
+  <title>Contact Us — Milan Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -20,15 +20,15 @@
     <!-- Logo -->
     <a href="index.html" class="flex items-center gap-3">
       <div class="w-10 h-10 rounded-xl flex items-center justify-center bg-yellow-300/90 text-primary-800 font-extrabold">E</div>
-      <span class="font-bold text-lg text-primary-700">Edensafe Montessori Kindergarten and International School</span>
+      <span class="font-bold text-lg text-primary-700">Milan Academy</span>
     </a>
 
     <!-- Desktop Menu -->
     <nav class="hidden md:flex items-center gap-8">
       <a href="index.html" class="text-sm font-medium hover:text-primary-600">Home</a>
-      <a href="about.html" class="text-sm font-medium hover:text-primary-600">About</a>
-      <a href="admission.html" class="text-sm font-medium hover:text-primary-600">Admissions</a>
-      <a href="contact.html" class="text-sm font-semibold text-primary-700">Contact</a>
+      <a href="#" class="text-sm font-medium hover:text-primary-600">About</a>
+      <a href="#" class="text-sm font-medium hover:text-primary-600">Admissions</a>
+      <a href="#" class="text-sm font-semibold text-primary-700">Contact</a>
       <a href="https://wa.me/2547XXXXXXX"
          class="ml-4 inline-flex items-center gap-2 px-4 py-2 rounded-full text-sm font-semibold bg-primary-500 text-white shadow-sm hover:bg-primary-600">
         WhatsApp
@@ -97,7 +97,7 @@
     <div class="p-8 rounded-2xl shadow bg-blue-50">
       <h3 class="text-xl font-bold text-primary-700 mb-2">Email Us</h3>
       <p class="text-gray-700 mb-4">We’re happy to answer questions or send more information.</p>
-      <p class="font-semibold text-lg">info@edensafe.ac.ke</p>
+      <p class="font-semibold text-lg">info@milanacademy.co.ke</p>
     </div>
 
     <!-- Visit -->
@@ -194,11 +194,11 @@
         <div class="flex items-center gap-3 mb-3">
           <div class="w-10 h-10 rounded-xl flex items-center justify-center bg-accent-butter text-primary-800 font-extrabold">E</div>
           <div>
-            <div class="font-bold">Edensafe Montessori</div>
-            <div class="text-sm muted">Utawala, Nairobi</div>
+            <div class="font-bold">Milan Academy</div>
+            <div class="text-sm muted">Kikuyu</div>
           </div>
         </div>
-        <p class="text-sm muted">A warm, inclusive Montessori & Cambridge school for children aged 2–12. We celebrate curiosity, independence, and kindness.</p>
+        <p class="text-sm muted">A warm, inclusive CBC education for children aged 2–12. We celebrate curiosity, independence, and kindness.</p>
       </div>
 
       <div>
@@ -214,16 +214,16 @@
       <div>
         <h4 class="font-semibold mb-3">Contact</h4>
         <p class="text-sm muted">📞 +254 7XX XXX XXX</p>
-        <p class="text-sm muted">✉️ info@edensafermontessori.co.ke</p>
+        <p class="text-sm muted">✉️ info@milanacademy.co.ke</p>
         <div class="mt-4 flex items-center gap-3">
           <a href="https://wa.me/2547XXXXXXXX" class="px-3 py-2 rounded-full bg-white/10 hover:bg-white/20" aria-label="WhatsApp"><svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.247-.595-.497-.52-.67.075-.173.595-.669 2.058-.818 2.456-.148.398-.496.67-.496.67s-.297.224-.496.174c-.199-.05-.868-.387-.868-.387s-.397-.199-.621-.298c-.224-.099-.497-.149-.696-.149-.199 0-.52.074-.794.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.307 1.262.489 1.688.625.712.225 1.36.195 1.871.12.539-.079 1.653-.698 1.877-1.305.224-.606.224-1.137.15-1.261-.075-.124-.273-.198-.57-.347"></path></svg></a>
-          <a href="mailto:info@edensafermontessori.co.ke" class="px-3 py-2 rounded-full bg-white/10 hover:bg-white/20" aria-label="Email"><svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12.713l-5.314-3.77a1 1 0 00-1.212.144 1 1 0 00-.144 1.212l6.5 7a1 1 0 001.448 0l6.5-7a1 1 0 00-.144-1.212 1 1 0 00-1.212-.144L12 12.713z"></path></svg></a>
+          <a href="mailto:info@milanacademy.co.ke" class="px-3 py-2 rounded-full bg-white/10 hover:bg-white/20" aria-label="Email"><svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12.713l-5.314-3.77a1 1 0 00-1.212.144 1 1 0 00-.144 1.212l6.5 7a1 1 0 001.448 0l6.5-7a1 1 0 00-.144-1.212 1 1 0 00-1.212-.144L12 12.713z"></path></svg></a>
         </div>
       </div>
     </div>
 
     <div class="mt-8 border-t border-white/10 pt-6 text-center text-sm muted">
-      <div>&copy; 2025 Edensafe Montessori & International School — Utawala, Nairobi</div>
+      <div>&copy; 2025 Milan Academy — Kikuyu, Nairobi</div>
       <div class="mt-2">Built with care by <a href="https://sonnysayisolutions.co.ke" class="underline text-accent-coral">Sonny Sayi Solutions</a></div>
     </div>
   </footer>
