--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Edensafe Montessori • Utawala</title>
+  <title>Milan Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -91,15 +91,15 @@
     <!-- Brand / Logo -->
     <a href="index.html" class="flex items-center gap-3">
       <div class="w-10 h-10 rounded-xl flex items-center justify-center bg-accent-butter/90 text-primary-800 font-extrabold">E</div>
-      <span class="font-bold text-lg text-primary-700">Edensafe Montessori Kindergarten and International school</span>
+      <span class="font-bold text-lg text-primary-700">Milan Academy</span>
     </a>
 
     <!-- Desktop Menu -->
     <nav class="hidden md:flex items-center gap-8">
       <a href="index.html" class="text-sm font-semibold text-primary-700 border-b-2 border-primary-500">Home</a>
-      <a href="about.html" class="text-sm font-medium hover:text-primary-600">About</a>
-      <a href="admission.html" class="text-sm font-medium hover:text-primary-600">Admissions</a>
-      <a href="contact.html" class="text-sm font-medium hover:text-primary-600">Contact</a>
+      <a href="#" class="text-sm font-medium hover:text-primary-600">About</a>
+      <a href="#" class="text-sm font-medium hover:text-primary-600">Admissions</a>
+      <a href="#" class="text-sm font-medium hover:text-primary-600">Contact</a>
       <a href="https://wa.me/2547XXXXXXXX" class="ml-4 inline-flex items-center gap-2 px-4 py-2 rounded-full text-sm font-semibold bg-primary-500 text-white shadow-sm hover:bg-primary-600" aria-label="Contact on WhatsApp">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" stroke="currentColor" stroke-width="1.2" /></svg>
         WhatsApp
@@ -117,9 +117,9 @@
   <!-- Mobile Menu -->
   <div id="mobileMenu" class="hidden md:hidden px-4 pb-4 border-t bg-white/95">
     <a href="index.html" class="block py-2 font-semibold text-primary-700">Home</a>
-    <a href="about.html" class="block py-2">About</a>
-    <a href="admission.html" class="block py-2">Admissions</a>
-    <a href="contact.html" class="block py-2">Contact</a>
+    <a href="#" class="block py-2">About</a>
+    <a href="#" class="block py-2">Admissions</a>
+    <a href="#" class="block py-2">Contact</a>
   </div>
 </header>
 
@@ -152,7 +152,7 @@
     </h1>
 
     <p class="text-primary-5 text-lg md:text-2xl mb-10 max-w-2xl mx-auto opacity-100 drop-shadow-lg background-color: rgba(0, 0, 0, 0.8); padding: 12px; border-radius: 8px;">
-      A warm, child-centered Montessori & Cambridge school in Utawala. We nurture children aged 2–12 through discovery, independence, academic excellence, and an inclusive approach that welcomes neurodiverse learners.
+      A warm, child-centered Montessori & CBC in kikuyu. We nurture children aged 2–12 through discovery, independence, academic excellence, and an inclusive approach that welcomes neurodiverse learners.
     </p>
 
     <div class="flex flex-col sm:flex-row justify-center gap-4">
@@ -172,7 +172,7 @@
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-4">Rooted in Montessori Values, Growing Through Cambridge Excellence</h2>
 
       <p class="text-gray-600 text-center max-w-3xl mx-auto mb-12">
-        At Edensafe, learning is joyful, intentional, and child-driven. We combine Dr. Montessori’s hands-on, curiosity-powered approach with the global strength of the Cambridge curriculum—creating a balanced, nurturing environment where every learner can flourish.
+        At Milan Academy, learning is joyful, intentional, and child-driven. We combine Dr. Montessori’s hands-on, curiosity-powered approach with the global strength of the Cambridge curriculum—creating a balanced, nurturing environment where every learner can flourish.
       </p>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
@@ -269,7 +269,7 @@
 </section>  <!-- Contact Section -->
   <section id="contact" class="py-16 px-4">
     <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold text-gray-800 mb-4">Visit Us in Utawala</h2>
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">Visit Us in Kikuyu</h2>
 
       <p class="text-gray-600 mb-8">
         Come experience our warm, child-friendly spaces, meet our teachers, and explore how we support children to learn joyfully and confidently.
@@ -286,9 +286,9 @@
     
     <!-- About -->
     <div>
-      <h3 class="text-xl font-bold mb-4 text-white">Edensafe Montessori</h3>
+      <h3 class="text-xl font-bold mb-4 text-white">Milan Academy</h3>
       <p class="text-gray-300 text-sm">
-        A nurturing, inclusive school in Utawala offering Montessori early years, Cambridge primary, and co-curricular activities for children aged 2–12.
+        A nurturing, inclusive school in Kikuyu offering Montessori early years, CBC primary, and co-curricular activities for children aged 2–12.
       </p>
     </div>
 
@@ -308,8 +308,8 @@
       <h4 class="font-semibold text-white mb-4">Contact Us</h4>
       <ul class="space-y-2 text-gray-300 text-sm">
         <li>📱 +254 7XX XXX XXX</li>
-        <li>✉️ info@edensafermontessori.co.ke</li>
-        <li>📍 Utawala, Nairobi</li>
+        <li>✉️ info@milanacademy.co.ke</li>
+        <li>📍 Kikuyu, Nairobi</li>
         <li>🕒 Mon–Fri: 7:30 AM – 4:00 PM</li>
       </ul>
     </div>
@@ -352,8 +352,8 @@
   <!-- Bottom Bar -->
 <!-- Bottom Bar -->
 <div class="max-w-6xl mx-auto border-t border-gray-800 mt-10 pt-6 text-center text-gray-400 text-sm">
-  <p>&copy; 2025 Edensafe Montessori & International School. All rights reserved.</p>
-  <p class="mt-1">Utawala, Nairobi</p>
+  <p>&copy; 2025 Milan Academy. All rights reserved.</p>
+  <p class="mt-1">Kikuyu, Nairobi</p>
   <p class="mt-2">
     Powered by 
     <a href="https://sonnysayisolutions.co.ke" target="_blank" rel="noopener noreferrer" class="text-ascent-coral hover:text-50">
