Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Background Image -->
   <div 
     class="absolute inset-0 bg-cover bg-center z-10"
-    style="background-image: url('assets/clss rm ai.jpg');"
+    style="background-image: url('assets/milan.jpg');"
   ></div>
 
   <!-- Dark Overlay for Readability -->
